# redacap

./: Cargo.toml  Claude.md  README.md  experts.md  index.html  package-lock.json  package.json  prompt-gen-claude.md  tailwind.config.js
agent/: Cargo.toml  Claude.md
agent/src/: catalog.rs  error.rs  lib.rs  model.rs  observer.rs  orchestration.rs  panel.rs  ports.rs  react.rs  tool.rs
agent/src/tools/: _georisques.rs  delegate.rs  document.rs  georisques.rs  intention.rs  interaction.rs  legal_act_editor.rs  legifrance.rs  metadata.rs  mod.rs  secret.rs
app/: Cargo.toml
app/src/: auth.rs  lib.rs  mod.rs  polyfill.rs  protocol.rs  utils.rs  ws.rs
app/src/app/: mod.rs
app/src/app/component/: content_editor.rs  legal_act_editor.rs  mod.rs
app/src/component/: bloc_marque.rs  button.rs  form.rs  legal_act_editor.rs  mod.rs
app/src/model/: autorite.rs  content.rs  mod.rs
app/src/pages/: account.rs  bootstrap.rs  dashboard.rs  dev.rs  editor_new.rs  login.rs  mod.rs  project_delete.rs  project_documents.rs  project_intentions.rs  project_metadata.rs
app/src/pages/admin/: agent_profiles.rs  agent_tools.rs  ai_models.rs  audit.rs  authorities.rs  dashboard.rs  domains.rs  groups.rs  integrations.rs  intentions.rs  mod.rs  oidc.rs  permissions.rs  users.rs
cli/: Cargo.toml
cli/src/: commands.rs  main.rs
content/: Cargo.toml
content/src/: crdt.rs  cursor.rs  direct.rs  handle.rs  id.rs  iter.rs  kind.rs  lib.rs  prelude.rs  traits.rs
content/src/crdt/: arena.rs  content.rs  mod.rs  node.rs  spec.rs
content/src/editor/: components.rs  context.rs  core.rs  event.rs  merge.rs  mod.rs  polyfill.rs  selection.rs
dsfr/: Cargo.toml
dsfr/src/: lib.rs
dsfr/src/components/: accordion.rs  alert.rs  back_to_top.rs  badge.rs  bloc_marque.rs  breadcrumb.rs  button.rs  callout.rs  card.rs  checkbox.rs  common.rs  header.rs  highlight.rs  input.rs  logo.rs  mod.rs  notice.rs  pagination.rs  quote.rs  radio.rs  resize_handle.rs  tag.rs  (+11 more)
frontend/: Cargo.toml
frontend/src/: lib.rs
legal_act/: Cargo.toml  Claude.md
legal_act/src/: body.rs  crdt.rs  cursor.rs  data.rs  direct.rs  id.rs  kind.rs  lib.rs  model.rs  selection.rs  str_ext.rs
legal_act/src/_editor/: component.rs  content.rs  context.rs  events.rs  header.rs  review.rs  selection_dom.rs  state.rs  widgets.rs
legal_act/src/editor/: component.rs  content.rs  context.rs  header.rs  hooks.rs  mod.rs  review.rs  selection_dom.rs  state.rs  tools.rs  widgets.rs
legal_act/src/editor/components/: mod.rs
legal_act/src/review/: crdt.rs  direct.rs  mod.rs
legal_act/src/rules/: mod.rs
legal_act/src/traits/: act.rs  mod.rs  node.rs  review.rs
marie/: Cargo.toml
marie/src/: lib.rs  protocol.rs  secret.rs
marie/src/agent/: context.rs  frame.rs  mod.rs  role.rs  status.rs
marie/src/job/: mod.rs
marie/src/model/: declaration.rs  mod.rs
marie/src/model/catalog/: mod.rs  network.rs  store.rs  types.rs
marie/src/network/: actor.rs  mod.rs  peer.rs
marie/src/network/cp/: log_store.rs  mod.rs  network.rs  rpc.rs  state.rs  types.rs
marie/src/network/persistency/: mod.rs
marie/src/network/worker/: info.rs  mod.rs  session_client.rs
marie/src/node/: mod.rs
marie/src/persistency/: filesystem.rs  mod.rs  session.rs  store.rs
marie/src/session/: crdt.rs  mod.rs  sync.rs
marie/src/tools/: catalog.rs  client.rs  declaration.rs  handler.rs  mod.rs
marie/src/tools/catalog/: mod.rs  store.rs
render/: Cargo.toml  Claude.md
render/src/: error.rs  lib.rs
render/src/odt/: content.rs  manifest.rs  meta.rs  mod.rs  numbering.rs  package.rs  style_names.rs  styles.rs  xml.rs
server/: CLAUDE.md  Cargo.toml
server/src/: guard.rs  lib.rs  main.rs  ports.rs  protocol.rs  state.rs  ws.rs
server/src/auth/: bootstrap.rs  credentials.rs  crypto.rs  mod.rs  oidc.rs  session.rs
server/src/editor/: mod.rs  ports.rs  presence.rs  protocol.rs  state.rs  ws.rs
shared/: Cargo.toml
shared/src/: broadcast.rs  crypto.rs  id.rs  lib.rs
shared/src/model/: acte.rs  agent_profile.rs  agent_run.rs  agent_session.rs  agent_tool_scope.rs  ai_model.rs  article.rs  audit_log.rs  authority.rs  configuration.rs  domain.rs  external_credentials.rs  group.rs  intention.rs  legal_act.rs  legal_act_document.rs  legal_act_metadata.rs  mod.rs  oidc_provider.rs  permission.rs  session.rs  user.rs
storage/: Cargo.toml  Claude.md
storage/migrations/: 0001_users_and_groups.down.sql  0001_users_and_groups.up.sql  0002_authorities_and_issuers.down.sql  0002_authorities_and_issuers.up.sql  0003_permissions.up.sql  0004_oidc_providers.down.sql  0004_oidc_providers.up.sql  0005_legal_acts.down.sql  0005_legal_acts.up.sql  0006_configurations.down.sql  0006_configurations.up.sql  0007_audit_log.up.sql  0008_credentials.up.sql  0009_sessions.up.sql  0010_legal_act_projects.down.sql  0010_legal_act_projects.up.sql  0011_domains_intentions.down.sql  0011_domains_intentions.up.sql  0012_ai_models.down.sql  0012_ai_models.up.sql  0013_external_credentials.down.sql  0013_external_credentials.up.sql  0014_legal_act_reviews.down.sql  0014_legal_act_reviews.up.sql  0015_agent_profiles.down.sql  0015_agent_profiles.up.sql  0016_agent_runs.down.sql  0016_agent_runs.up.sql  0017_agent_sessions.down.sql  0017_agent_sessions.up.sql  0018_agent_profile_ai_model.down.sql  0018_agent_profile_ai_model.up.sql  0019_legal_act_metadata.down.sql  0019_legal_act_metadata.up.sql  0020_legal_act_documents.down.sql  0020_legal_act_documents.up.sql  0021_legal_act_document_labels.down.sql  0021_legal_act_document_labels.up.sql
storage/src/: agent_profile.rs  agent_run.rs  agent_session.rs  agent_tool_scope.rs  ai_model.rs  audit_log.rs  authority.rs  bootstrap.rs  configuration.rs  credential.rs  db.rs  domain.rs  error.rs  external_credentials.rs  group.rs  id.rs  intention.rs  legal_act.rs  legal_act_document.rs  legal_act_metadata.rs  legal_act_review.rs  lib.rs  oidc_provider.rs  permission.rs  session.rs  user.rs  user_group.rs
style/: input.css  output.css
worker/: Cargo.toml
worker/src/: legal_act.rs  legal_act_review.rs  lib.rs  main.rs
