[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
dsfr = { path = "../dsfr" }
async-trait = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
leptos.workspace = true
pulldown-cmark.workspace = true
quick-xml = { version = "0.41.0", optional = true }
regex = { version = "1", optional = true }
reqwest = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["io-util", "macros", "process", "sync"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate"], optional = true }
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = [
    "Event",
    "File",
    "FileList",
    "FileReader",
    "HtmlInputElement",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "sync"] }

[features]
default = ["server"]
# Boucle agentique, modèle de langage et outils — dépendances réseau
# (reqwest, tokio), non disponibles en WASM. Le composant `AgentPanel` n'en
# a pas besoin et reste donc utilisable côté client.
server = [
    "dep:async-trait",
    "dep:chrono",
    "dep:quick-xml",
    "dep:regex",
    "dep:reqwest",
    "dep:thiserror",
    "dep:tokio",
    "dep:zip",
]
ssr = ["leptos/ssr", "server"]
hydrate = ["leptos/hydrate"]
