[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
web-sys.workspace = true
anyhow.workspace = true
rand_xoshiro.workspace = true
strum_macros.workspace = true
bimap.workspace = true
indextree.workspace = true
getrandom.workspace = true
js-sys.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum"]
