[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
agent = { path = "../agent", default-features = false }
content = { path = "../content", default-features = false }
legal_act = { path = "../legal_act", default-features = false }
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_ws.workspace = true
leptos_axum = { workspace = true, optional = true }
web-sys = { workspace = true, features = ["WebSocket", "MessageEvent", "BinaryType", "CloseEvent", "Location", "Window"] }
yrs.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
rand_xoshiro.workspace = true
strum_macros.workspace = true
bimap.workspace = true
indextree.workspace = true
getrandom.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate", "content/hydrate", "legal_act/hydrate", "agent/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum", "content/ssr", "legal_act/ssr", "agent/ssr", "leptos_ws/ssr"]
