[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
agent = { path = "../agent", default-features = false }
legal_act = { path = "../legal_act", default-features = false }
dsfr = { path = "../dsfr", default-features = false }
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_ws.workspace = true
leptos_axum = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
axum-extra = { workspace = true, optional = true }
storage = { path = "../storage", optional = true }
marie = { workspace = true, features = ["catalog"], optional = true }
shared = { path = "../shared" }
web-sys = { workspace = true, features = ["WebSocket", "MessageEvent", "BinaryType", "CloseEvent", "Location", "Window", "HtmlInputElement"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
strum_macros.workspace = true
base64.workspace = true
pulldown-cmark.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate", "legal_act/hydrate", "agent/hydrate", "dsfr/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum", "dep:axum", "dep:axum-extra", "dep:storage", "dep:marie", "legal_act/ssr", "agent/ssr", "leptos_ws/ssr", "dsfr/ssr"]
