[package]
name = "content"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = {path = "../shared" }
yrs.workspace = true
strum.workspace = true
strum_macros.workspace = true
anyhow.workspace = true
indextree.workspace = true
bimap.workspace = true
leptos.workspace = true
web-sys.workspace = true
js-sys.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr"]