[package]
name = "legal_act"
version = "0.1.0"
edition = "2024"

[dependencies]
agent = {path = "../agent", default-features = false}
shared = {path = "../shared" }
dsfr = {path = "../dsfr" }
yrs.workspace = true
strum.workspace = true
strum_macros.workspace = true
anyhow.workspace = true
indextree.workspace = true
bimap.workspace = true
leptos.workspace = true
web-sys.workspace = true
loro.workspace = true
serde.workspace = true
serde_json.workspace = true
derive_more = {workspace = true, features = ["from"]}

[features]
default = []
hydrate = ["leptos/hydrate", "agent/hydrate"]
ssr = ["leptos/ssr", "agent/ssr"]