[package]
name = "marie"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
thiserror = "2.0"
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
rand_xoshiro = "0.8.1"
getrandom = { version = "0.2", features = ["js"] }
bytemuck = { version = "1.14", features = ["derive"] }
openraft = { version = "0.9.24", features = ["serde", "storage-v2"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
reqwest-sse = "0.1.0"
tokio-stream = { version = "0.1.18", features = ["sync"] }
async-stream = "0.3.6"
tracing = "0.1"
strum = "0.26"
strum_macros = "0.26"
yrs = { version = "0.27.2", features = ["sync"] }
# Network
libp2p = { version = "0.56.0", 
    features = [
        "serde",
        "gossipsub", 
        "mdns", 
        "identify",
        "tcp", 
        "noise", 
        "yamux",
        "tokio", 
        "macros", 
        "request-response", 
        "json", 
        "ed25519"
    ] 
}


# IA Model
async-openai = {version = "0.41.1", features = ["_api", "responses", "response-types"]}

# Cryptography & Secrets
chacha20poly1305 = "0.10"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
ed25519-dalek = "2"
x25519-dalek = "2"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Persistence (voir network::persistency)
redb = "4.1.0"
typed-builder = "0.23.2"
# Filesystem de session (voir persistency::filesystem) : provider abstrait,
# mémoire ou S3/compatible S3 (MinIO, etc.)
object_store = { version = "0.14.0", features = ["aws"] }
