[package]
name = "server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
legal_act = { path = "../legal_act", default-features = false }
storage = { path = "../storage" }
leptos = { workspace = true, features = [ "ssr" ]}
leptos_axum.workspace = true

axum = { workspace = true, features = ["ws"] }
axum-extra.workspace = true
cookie.workspace = true
simple_logger.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
anyhow.workspace = true
dotenv.workspace = true
chrono.workspace = true
shared = { path = "../shared" }
marie = { workspace = true, features = ["catalog"] }
openidconnect.workspace = true
reqwest.workspace = true
aes-gcm.workspace = true
base64.workspace = true
time.workspace = true
thiserror.workspace = true
futures-util = "0.3"
tracing.workspace = true
tracing-subscriber.workspace = true
pulldown-cmark.workspace = true

[features]
default = ["ssr"]
ssr = ["app/ssr", "leptos/ssr"]
