[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
rand_xoshiro.workspace = true
anyhow.workspace = true
getrandom.workspace = true
bytemuck.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
aes-gcm.workspace = true
thiserror.workspace = true